changed build paper version to 1.21.10